style.css
html {
  font-size: 62.5%;
}
main {
  display: flex;
  flex-direction: column;
  align-items: center;
}
header {
  display: flex;
  flex-direction: column;
  align-items: center;
}
header h1 {
  font-size: 3rem;
  font-weight: 600;
  margin-bottom: 0;
}
header p {
  font-size: 1.3rem;
  color: gray;
}
.changelog {
  font-size: 1.5rem;
  display: flex;
  margin: 0 0 2em 0;
}
.datetime {
  text-align: end;
  color: gray;
}
.checkpoints {
  width: 2px;
  height: 300px;
  background-color: black;
  border-radius: 1px;
  margin: 0 1em 0 1em;
}
.checkpoints div {
  margin: 1.2em 0 1.34em -0.4em;
  width: 15px;
  height: 15px;
  background-color: black;
  border-radius: 50%;
}
button {
  background-color: #1e1e1e;
  border-radius: 7px;
  border: none;
  color: white;
  font-size: 1.3rem;
  padding: 0.7em 2em 0.7em 2em;
  cursor: pointer;
}

